--- a/Pages/blockPage.html
+++ b/Pages/blockPage.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Blocked</title>
-    <link rel="stylesheet" type="text/css" href="blockPage.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/ThomyDeCroos/Models/Pages/blockPage.css" />
   </head>
   <body>
     <div class="floater">
-        <img class="logo" src="Images\MainLogo-Dark.png" alt="Main Logo">
+        <img class="logo" src="https://cdn.jsdelivr.net/gh//ThomyDeCroos/Models/Pages/Images/MainLogo-Dark.png" alt="Main Logo">
         <div class="content_block">
             <div class="inner_block">
                 <h4>Content Blocked</h4>
@@ -21,7 +21,7 @@
         </div>
     </div>
     <div class="bottom_text">
-        <img class="pure_logo" src="Images\Pure Visio.png" alt="Pure Logo">
+        <img class="pure_logo" src="https://cdn.jsdelivr.net/gh//ThomyDeCroos/Models/Pages/Images/Pure%20Visio.png" alt="Pure Logo">
         <div class="dead_center">
             <p class="small_text">Designed and Developed by Thomy De Croos</p>
         </div>
